2011-05-13  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12724]
	* libio/fileops.c (_IO_new_file_close_it): Always flush when
	currently writing and seek to current position when not.
	* libio/Makefile (tests): Add bug-fclose1.
	* libio/bug-fclose1.c: New file.

2011-05-12  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12511]
	* elf/dl-lookup.c (enter): Don't test for copy relocation here and
	don't set DF_1_NODELETE here.
	(do_lookup_x): When entering new entry test for copy relocation
	and if necessary set DF_1_NODELETE flag.
	* elf/tst-unique4.cc: New file.
	* elf/tst-unique4.h: New file.
	* elf/tst-unique4lib.cc: New file.
	* elf/Makefile: Add rules to build and run tst-unique4.
	Patch by Piotr Bury <pbury@goahead.com>.

2011-05-11  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12052]
	* sysdeps/posix/spawni.c (__spawni): Fix sched_setscheduler call.

	[BZ #12625]
	* misc/mntent_r.c (addmntent): Flush the stream after the output

	[BZ #12393]
	* elf/dl-load.c (is_trusted_path): Remove unnecessary test.
	(is_trusted_path_normalize): Skip initial colon.  Append slash
	to empty buffer.  Duplicate is_trusted_path code but allow
	constructed patch to be prefix.
	(is_dst): Allow $ORIGIN followed by /.
	(_dl_dst_substitute): Correct clearing of check_for_trusted.
	Correct testing of result of is_trusted_path_normalize
	(decompose_rpath): Fix warning.

2011-05-10  Ulrich Drepper  <drepper@gmail.com>

	[BZ #11257]
	* grp/initgroups.c (internal_getgrouplist): When we found the service
	list through the initgroups entry in nsswitch.conf do not always
	continue on a successful lookup.  Don't always use the
	__nss_group_database value if it is set.
	* nss/nsswitch.conf (initgroups): Change action for successful db
	lookup to continue for compatibility.

2011-05-09  Ulrich Drepper  <drepper@gmail.com>

	[BZ #11532]
	* iconvdata/Makefile: Add rules to build CP770, CP771, CP772, CP773,
	and CP774 modules.
	* iconvdata/gconv-modules: Add entries for CP770, CP771, CP772, CP773,